objects/Product_Adjustment__c/Product_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Product Adjustment</label>
    <nameField>
        <displayFormat>PA-{0000000}</displayFormat>
        <label>Product Adjustment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>