objects/Product_Adjustment__c/fields/Density__c.field-meta.xml
<CustomField>
    <fullName>Density__c</fullName>
    <label>Density</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Density</valueSetName>
    </valueSet>
</CustomField>