objects/Product_Adjustment__c/fields/Product_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Product_Adjustment__c</fullName>
    <label>Product Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>